--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <form id="pinForm" class="mt-5 space-y-4">
         <div class="space-y-2">
           <label for="pinInput" class="block text-sm font-medium text-slate-700">4-digit PIN</label>
-          <input id="pinInput" type="text" inputmode="numeric" pattern="\\d{4}" maxlength="4" required placeholder="1234" class="w-full rounded-xl border border-slate-200 px-4 py-3 focus:outline-none focus:ring-2 focus:ring-slate-900/50 tracking-[0.3em] text-center text-lg" />
+          <input id="pinInput" type="text" inputmode="numeric" pattern="\[0-9]{4}" maxlength="4" required placeholder="1234" class="w-full rounded-xl border border-slate-200 px-4 py-3 focus:outline-none focus:ring-2 focus:ring-slate-900/50 tracking-[0.3em] text-center text-lg" />
           <p id="pinError" class="text-xs text-rose-600 hidden">That PIN was not recognized. Please try again.</p>
         </div>
         <div class="flex justify-end gap-3">
@@ -194,7 +194,7 @@
       pinForm.addEventListener('submit', async (e) => {
         e.preventDefault();
         const pin = pinInput.value.trim();
-        if (!/^\d{4}$/.test(pin)) {
+        if (!/^[0-9]{4}$/.test(pin)) {
           pinError.textContent = 'Please enter a 4-digit PIN.';
           pinError.classList.remove('hidden');
           return;
