Update fmt.Println message to Goodbye World
update 
const response = await fetch(`${SCRIPT_URL}?pin=${encodeURIComponent(pin)}`);

--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
 
     async function verifyContractor(pin) {
       try {
-        const response = await fetch(\`\${SCRIPT_URL}?pin=\${encodeURIComponent(pin)}\`);
+        const response = await fetch(`${SCRIPT_URL}?pin=${encodeURIComponent(pin)}`);;
         if (!response.ok) throw new Error('Failed to fetch contractor');
         const data = await response.json();
         const contractor = data?.contractor || data?.Contractor || data;
@@ -653,3 +653,4 @@
   </script>
 </body>
 </html>
+
