Update SCRIPT_URL to the deployed Apps Script URL

--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
   <script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
   <script>
     // IMPORTANT: paste YOUR deployed Apps Script Web App URL:
-    const SCRIPT_URL = 'PASTE_YOUR_WEB_APP_URL_HERE';
+    const SCRIPT_URL = 'https://script.google.com/macros/s/AKfycbzHH6DEgjr-jexZGuqDk9kpzIBL4SeDAGzS62KcIS1Lehy8nnX3_fWfWv4yKYhccZs9Kg/exec';
 
     const state = {
       pin: '',
